infrastructure/01-system/falco/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falco
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
